# vector-grep

./: AGENTS.md  Cargo.toml  README.md  implementation-plan.md  tech-stack.md
.github/workflows/: release.yml
.learnings/: LEARNINGS.md
crates/vg-cli/: Cargo.toml
crates/vg-cli/src/: main.rs
crates/vg-core/: Cargo.toml
crates/vg-core/benches/: search_pipeline.rs
crates/vg-core/src/: config.rs  embed.rs  lib.rs  preproc.rs  progress.rs  store.rs
crates/vg-core/src/chunk/: mod.rs  splitter.rs
crates/vg-core/src/index/: file_walker.rs  hasher.rs  mod.rs
crates/vg-core/src/output/: json.rs  mod.rs  rg_style.rs  vector_teaser.rs
crates/vg-core/src/progress/: bar.rs
crates/vg-core/src/search/: hybrid.rs  mod.rs  query_bridge.rs  text.rs  vector.rs
crates/vg-indexer/: Cargo.toml
crates/vg-indexer/src/: main.rs
docs/: 2026-03-17-vg-notebook-coverage-report.md  vg-tdd.md
docs/260316_vg/test_cases/: mindmap.md  module-01-cli-entry-and-args.md  module-02-index-sync-and-cache.md  module-03-semantic-search.md  module-04-hybrid-output.md  review-issues.md  smoke-regression-checklist.md
docs/examples/: config.example.json
docs/plans/: 2026-03-18-brew-distribution.md  2026-03-19-vector-teaser-rendering.md
docs/superpowers/specs/: 2026-03-18-brew-distribution-design.md  2026-03-19-vector-teaser-rendering-design.md
tests/fixtures/: auth-guide.md  auth.rs  error-handling.md
tests/integration/: coverage_comparison.rs
