[workspace]
members = [
    "crates/vg-core",
    "crates/vg-cli",
    "crates/vg-indexer",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "MIT"
authors = ["Codex"]

[workspace.dependencies]
anyhow = "1.0.100"
blake3 = "1.8.2"
dirs = "6.0.0"
indicatif = "0.17"
ignore = "0.4.25"
once_cell = "1.21.3"
rayon = "1.11.0"
rusqlite = { version = "0.39.0", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlite-vec = "0.1.7-alpha.10"
tempfile = "3.23.0"
termcolor = "1.4.1"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
fastembed = { version = "5.13.0", default-features = false, features = ["hf-hub-native-tls", "ort-download-binaries-native-tls"] }
hf-hub = { version = "0.4.3", features = ["native-tls"] }
ureq = { version = "2.12.1", features = ["json", "native-tls"] }
criterion = "0.5.1"
