[package]
name = "vg-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
tracing-subscriber.workspace = true
vg-core = { path = "../vg-core" }

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "vg"
path = "src/main.rs"

[[test]]
name = "coverage_comparison"
path = "../../tests/integration/coverage_comparison.rs"
